[gd_scene load_steps=2 format=3 uid="uid://bbgn73qfxwpd7"]

[ext_resource type="Script" uid="uid://5hm3f3djmroy" path="res://scripts/FallingCard.gd" id="1_cqsh4"]

[node name="FallingCard" type="Control"]
custom_minimum_size = Vector2(48, 67)
layout_mode = 3
anchors_preset = 0
offset_right = 48.0
offset_bottom = 67.0
script = ExtResource("1_cqsh4")

[node name="CardBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.86, 0.15, 0.15, 1)

[node name="CardBorder" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.3)

[node name="CardShine" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.1)

[node name="CardSymbol" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -15.0
offset_right = 15.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "âš”"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardCost" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -16.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = 20.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 10
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardValue" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -16.0
offset_top = -20.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "6"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FallTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
